--- a/src/i18n/locales/zh-tw.json
+++ b/src/i18n/locales/zh-tw.json
@@ -6,7 +6,7 @@
     "Box Detect B": "Box檢測B",
     "Model Training": "雲端模型訓練",
     "New Training": "啟動訓練任務",
-    "Training Result": "模型訓練及部署",
+    "Training Result": "已包裝應用",
     "Inference on Cloud": "雲端圖片推理",
     "New Inference": "啟動推理任務",
     "Manual Verify": "推理結果校驗",
@@ -18,68 +18,51 @@
     "Dashboard": "儀表板",
     "Model Dashboard": "模型訓練和推理",
     "Alert Dashboard": "告警事件",
-
     "Config": "配置管理",
-    "Deployment Config": "部署配置",
+    "Deployment Config": "已部署應用",
     "Component Config": "組件配置",
     "Model Config": "模型配置",
     "Device Config": "設備配置",
     "Camera Config": "攝像頭配置",
-
     "New Deployment": "新建部署配置",
-    "Device Choose Placeholder":"請選擇一個設備",
-    "Camera Choose Placeholder":"請選擇一個攝像頭",
+    "Device Choose Placeholder": "請選擇一個設備",
+    "Camera Choose Placeholder": "請選擇一個攝像頭",
     "New Component Config": "新组件配置",
     "Component Version Config": "組件版本配置",
     "New Component Version Config": "新组件版本配置",
     "New Model Config": "新建模型配置",
     "Model Version Config": "模型版本配置",
     "New Model Version Config": "新模型版本配置",
-    "Clone Model":"複製模型配置",
-
+    "Clone Model": "複製模型配置",
     "New Device Config": "新建設備配置",
     "New Camera Config": "新建攝像頭配置",
-
     "QRCode": "告警二維碼",
-
-
     "mask": "口罩",
     "helmet": "安全帽",
     "person": "電子圍欄",
     "Prev": "上頁",
     "Next": "下頁",
-
     "Home": "主頁",
     "Export": "Export",
-
     "welcome": "歡迎來首頁",
-
     "Create new Training Job": "創建新訓練任務",
     "Model Training Table": "訓練模型表",
     "Model Result": "模型訓練",
     "Train Output Detail": "模型訓練輸出",
     "Deploy": "部署",
-
-
     "Job_id:": "任務:",
     "Status:": "狀態:",
     "Tag:": "狀態",
-
-
     "Event Table": "告警事件表",
     "Export Verified Event Dataset": "導出校驗後的事件數據",
-
     "Alert Pic": "告警圖片",
     "Original Pic": "原始圖片 ",
-
     "Monitoring": "監控管理",
     "Camera Monitoring": "攝像頭監控",
-
     "Monitoring Cameras": "監控攝像頭",
     "Live Video": "實時監控",
     "Camera Events": "告警事件",
     "Start Monitoring": "啟動監控",
     "Stop Monitoring": "停止監控",
     "refresh": "刷新"
-
 }
