refactor menu and add deployment delete UI changes

--- a/src/i18n/locales/en-us.json
+++ b/src/i18n/locales/en-us.json
@@ -4,8 +4,9 @@
     "Local Inference": "Local Box Inference",
     "Box Detect A": "Box Detect A",
     "Box Detect B": "Box Detect B",
+    "Application": "Application",
     "Model Training": "Model Training",
-    "New Training": "New Training",
+    "New Training": "New Package",
     "Training Result": "Packaged Application",
     "Inference on Cloud": "Inference on Cloud",
     "New Inference": "New Inference",
@@ -46,7 +47,7 @@
     "Export": "Export",
     "welcome": "Welcome To Home -en",
     "Create new Training Job": "Create new Training Job",
-    "Model Training Table": "Model Training Table",
+    "Packaged Application Table": "Packaged Application Table",
     "Model Result": "Model Result",
     "Train Output Detail": "Train Output Detail",
     "Deploy": "Deploy",
