--- a/src/i18n/locales/zh-cn.json
+++ b/src/i18n/locales/zh-cn.json
@@ -4,8 +4,9 @@
     "Local Inference": "本地实时推理",
     "Box Detect A": "Box检测A",
     "Box Detect B": "Box检测B",
+    "Application": "应用",
     "Model Training": "云端模型训练",
-    "New Training": "启动训练任务",
+    "New Training": "包装应用",
     "Training Result": "已封装应用",
     "Inference on Cloud": "云端图片推理",
     "New Inference": "启动推理任务",
@@ -46,7 +47,7 @@
     "Export": "Export",
     "welcome": "欢迎来首页",
     "Create new Training Job": "创建新训练任务",
-    "Model Training Table": "训练模型表",
+    "Packaged Application Table": "包装应用表",
     "Model Result": "模型训练",
     "Train Output Detail": "模型训练输出",
     "Deploy": "部署",
