--- a/src/i18n/locales/zh-tw.json
+++ b/src/i18n/locales/zh-tw.json
@@ -4,8 +4,9 @@
     "Local Inference": "本地實時推理",
     "Box Detect A": "Box檢測A",
     "Box Detect B": "Box檢測B",
+    "Application": "應用",
     "Model Training": "雲端模型訓練",
-    "New Training": "啟動訓練任務",
+    "New Training": "包裝應用",
     "Training Result": "已包裝應用",
     "Inference on Cloud": "雲端圖片推理",
     "New Inference": "啟動推理任務",
@@ -46,7 +47,7 @@
     "Export": "Export",
     "welcome": "歡迎來首頁",
     "Create new Training Job": "創建新訓練任務",
-    "Model Training Table": "訓練模型表",
+    "Packaged Application Table": "包裝應用表",
     "Model Result": "模型訓練",
     "Train Output Detail": "模型訓練輸出",
     "Deploy": "部署",
