ui changes for deployment

--- a/src/i18n/locales/en-us.json
+++ b/src/i18n/locales/en-us.json
@@ -5,6 +5,7 @@
     "Box Detect A": "Box Detect A",
     "Box Detect B": "Box Detect B",
     "Application": "Application",
+    "Remove Application": "Remove Application",
     "Model Training": "Model Training",
     "New Training": "New Package",
     "Training Result": "Packaged Application",
