--- a/src/i18n/locales/zh-cn.json
+++ b/src/i18n/locales/zh-cn.json
@@ -4,6 +4,7 @@
     "Local Inference": "本地实时推理",
     "Box Detect A": "Box检测A",
     "Box Detect B": "Box检测B",
+    "Remove Application": "移除应用",
     "Application": "应用",
     "Model Training": "云端模型训练",
     "New Training": "包装应用",
