--- a/src/i18n/locales/zh-tw.json
+++ b/src/i18n/locales/zh-tw.json
@@ -4,6 +4,7 @@
     "Local Inference": "本地實時推理",
     "Box Detect A": "Box檢測A",
     "Box Detect B": "Box檢測B",
+    "Remove Application": "移除應用",
     "Application": "應用",
     "Model Training": "雲端模型訓練",
     "New Training": "包裝應用",
